# ImageCompressor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ImageCompressor.spec  Makefile  README.md  build.spec  compress.py  out.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  图片压缩工具.spec
.github/workflows/: ci.yml
src/: app.py  cli.py  main.py
src/core/: compressor.py  config_manager.py  models.py  platform.py  utils.py
src/core/engines/: base.py  pillow_engine.py  vips_engine.py
src/i18n/: strings.py
src/ui/: __init__.py  file_panel.py  log_panel.py  preview_window.py  settings_panel.py  theme.py  widgets.py
src/workers/: compress_worker.py  message_handler.py  watch_worker.py
tests/: test_avif_heic.py  test_cli.py  test_compressor.py  test_config_manager.py  test_engines.py  test_i18n.py  test_message_handler.py  test_models.py  test_platform.py  test_utils.py  test_watch_worker.py  test_worker.py
